force-app/main/default/objects/Expense_Claim__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <label>Approved Amount</label>
    <summarizedField>Expense_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Expense_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Item__c.Expense_Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>