force-app/main/default/objects/Expense_Claim__c/fields/Bank_Details_Present__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Present__c</fullName>
    <description>For report</description>
    <formula>AND(Employee__r.Bank_Detail__c!=null,Employee__r.AccountNumber!=null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Details Present</label>
    <type>Checkbox</type>
</CustomField>