force-app/main/default/objects/Expense_Claim__c/fields/Converted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Amount__c</fullName>
    <label>Converted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>