force-app/main/default/objects/Expense_Claim__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>