force-app/main/default/objects/Expense_Claim__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expense Claims</relationshipLabel>
    <relationshipName>Expense_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>