force-app/main/default/objects/Expense_Claim__c/fields/Exp_Bank_File_Generated__c.field-meta.xml
<CustomField>
    <fullName>Exp_Bank_File_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true for Expense Claim records for which Expense Bank File is generated.</description>
    <label>Expense Bank File Generated</label>
    <type>Checkbox</type>
</CustomField>