force-app/main/default/objects/Expense_Claim__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Expense Claims</relationshipLabel>
    <relationshipName>Expense_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>