force-app/main/default/objects/Expense_Claim__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <description>Updated from Approval Process on Claim Submission</description>
    <label>Submit Date</label>
    <type>Date</type>
</CustomField>