force-app/main/default/objects/Expense_Claim__c/fields/Submit_For_Approval_Expense_Claim__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Approval_Expense_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for submit expense claim record for approval</description>
    <label>Submit For Approval Expense Claim</label>
    <type>Checkbox</type>
</CustomField>