force-app/main/default/objects/Expense_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Submit_Date__c</columns>
    <columns>Applied_Amount__c</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Exp_Bank_File_Generated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>