force-app/main/default/objects/Expense_Claim__c/listViews/Approved_Expense_Claims.listView-meta.xml
<ListView>
    <fullName>Approved_Expense_Claims</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Submit_Date__c</columns>
    <columns>Applied_Amount__c</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Converted_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Exp_Bank_File_Generated__c</columns>
    <columns>Bank_Details_Present__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Expense Claims</label>
</ListView>