force-app/main/default/objects/Expense_Claim__c/listViews/Finance_Queue_Expense_Claim.listView-meta.xml
<ListView>
    <fullName>Finance_Queue_Expense_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Queue</label>
    <queue>Finance_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>