force-app/main/default/objects/Expense_Claim__c/listViews/Rejected_Expense_Claims.listView-meta.xml
<ListView>
    <fullName>Rejected_Expense_Claims</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Submit_Date__c</columns>
    <columns>Applied_Amount__c</columns>
    <columns>Approved_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Expense Claims</label>
</ListView>